welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:12: error: '(' expected but identifier found.
			/*diag = diag +1; */setPos(getY(),getX())	
                                            ^Diagonal:14: error: illegal start of simple expression
	}
        ^